add data dict digits

--- a/index.org
+++ b/index.org
@@ -3564,15 +3564,20 @@ categories:
   data_dict <- function(.dataframe, .variable, .show_levels = -1)
   {
   
+  summary2 <- function(x){
+    summa <- summary(x, digits = nchar(max(x))+3)
+    return(summa)
+  }
+  
     if(is.character(.dataframe[ ,.variable])){
       .dataframe[,.variable]  <- factor(.dataframe[,.variable])
     }
     if(all(is.na(.dataframe[ ,.variable]))){
-      summa <- summary(.dataframe[,.variable])
+      summa <- summary2(.dataframe[,.variable])
       summa <- as.data.frame(t(summa[2]))
       summa[,1]  <- as.numeric(as.character(summa[,1]))
     } else {
-      summa <- summary(.dataframe[,.variable])
+      summa <- summary2(.dataframe[,.variable])
     }
   # if there are some missing obs in a date var you get a malformed
   # summa with less names than levels
@@ -3692,14 +3697,14 @@ categories:
   civst_gend_sector <- read.csv(fpath)
   civst_gend_sector$datevar <- as.Date(round(rnorm(nrow(civst_gend_sector), Sys.Date(),10)), origin = "1970-01-01")
   civst_gend_sector$missing_variable  <- NA
-  civst_gend_sector$Survey.year  <- rep(2012, nrow(civst_gend_sector))
+  civst_gend_sector$Survey.year  <- as.integer(rep(2012, nrow(civst_gend_sector)))
   str(civst_gend_sector)
   #data_dict
   data_dict(civst_gend_sector, "civil_status")
   data_dict(civst_gend_sector, "datevar")
   data_dict(civst_gend_sector, "number_of_cases")
   data_dict(civst_gend_sector, "missing_variable")
-  
+  data_dict(civst_gend_sector, "Survey.year")
   dataDictionary <- data_dictionary(civst_gend_sector,
                                     show_levels = -1)
   
@@ -3712,7 +3717,8 @@ categories:
   civst_gend_sector$civil_status[sample(1:nrow(civst_gend_sector), 7)] <- NA
   # and number of cases
   civst_gend_sector$number_of_cases[sample(1:nrow(civst_gend_sector), 2)] <- NA
-  
+  civst_gend_sector$Survey.year[sample(1:nrow(civst_gend_sector), 4)] <- NA
+  str(civst_gend_sector)
   data_dict(
             .dataframe=civst_gend_sector
             ,
