add handling na dates

--- a/index.org
+++ b/index.org
@@ -3625,7 +3625,7 @@ categories:
     summa <- summa[,c(1,4,2,3,5,6)]
     } else if (
      !all(
-        is.na(as.Date(as.character(.dataframe[,.variable]), origin = "1970-01-01"))
+        is.na(as.Date(as.character(na.omit(.dataframe[,.variable])), origin = "1970-01-01"))
         )
       ){
     # if date
@@ -3641,7 +3641,12 @@ categories:
     summa$type <- c("date", rep("", nrow(summa) - 1))
     summa$cnt <- NA
     summa$pct  <- NA
-    summa$V3 <- as.character(as.Date(as.numeric(as.character(summa$V3)), origin = "1970-01-01"))  
+    summa
+    summa$V3[-which(summa$V2 == "NA's")] <- as.character(
+        as.Date(as.character(
+        summa$V3[-which(summa$V2 == "NA's")]
+        ), origin = "1970-01-01")
+        )  
     summa <- summa[,c(1,4,2,3,5,6)]
     } else if (all(is.na(.dataframe[ ,.variable]))){
       
