--- a/index.org
+++ b/index.org
@@ -2740,7 +2740,7 @@ I've been using a [fictitious dataset from a Statistics Methodology paper by Rit
                  unit.defs = unit_defs
                  )
   # now write EML metadata file
-  eml_config(creator=created_by)
+  eml_config(creator=%s)
   eml_write(ds,
             file = %s,
             title = %s
@@ -2754,7 +2754,7 @@ I've been using a [fictitious dataset from a Statistics Methodology paper by Rit
         <url function="download">ecogrid://knb/hanigan.34.1</url>
       </online>
     </distribution>
-  </physical>', outfile, titl)
+  </physical>', created_by, outfile, titl)
   )
   
   
