add lcu string function

--- a/index.org
+++ b/index.org
@@ -1913,15 +1913,27 @@ fill.col(d, 'suburb')
 #+end_src
 
 ** names_lcu
+*** R-lcu
+
+#+begin_src R :session *R* :tangle R/lcu.r :exports none :eval no
+  ################################################################
+  # name:lcu
+  lcu <- function(x){
+    x <- make.names(x)
+    x<-tolower(x)  
+    x<-gsub("\\.","_",x)
+    x<-gsub("_+","_",x)
+    return(x)
+  }
+#+end_src
+
 *** R-names_lcu
 #+name:names_lcu
 #+begin_src R :session *R* :tangle R/names_lcu.r :exports none :eval no
   ################################################################
   # name:names_lcu
   names_lcu <- function(x){
-    names(x)<-gsub("\\.","_",names(x))
-    names(x)<-gsub("_+","_",names(x))
-    names(x)<-tolower(names(x))
+    names(x)<-lcu(names(x))
     return(names(x))
   }
 #+end_src
@@ -1930,12 +1942,13 @@ fill.col(d, 'suburb')
 #+begin_src R :session *R* :tangle tests/test-names_lcu.r :exports none :eval no
   ################################################################
   # name:names_lcu
-  
+  require(devtools)
+  load_all()
   # kudos
   # http://blog.i2pi.com/post/52812976752/joshs-postgresql-database-conventions
   
   dat  <- read.csv(textConnection(
-  "All names,  should be lowercase with underscores, ., R does support , AnYSortOF casing that you’d like, but it makes some programming painful, also avoid symbols (eg. % & !)
+  "All names,should be lowercase with underscores,.,R does support ,AnYSortOF casing that you’d like, but it makes some programming painful,2/1 avoid number at start also avoid symbols (eg. % & !)
   table,,,,,
   column,,,,,
   sequence,,,,,
@@ -1943,7 +1956,21 @@ fill.col(d, 'suburb')
   constraint,,,,,
   role,,,,,
   etc,,,,,,
-  "))
+  "), header = F, stringsAsFactor=F)
+  strng <- dat[1,]
+  strng
+  lcu(strng)
+  
+  dat  <- read.csv(textConnection(
+  "All names,  should be lowercase with underscores, ., R does support , AnYSortOF casing that you’d like, but it makes some programming painful,2/1 avoid number at start also avoid symbols (eg. % & !)
+  table,,,,,
+  column,,,,,
+  sequence,,,,,
+  index,,,,,
+  constraint,,,,,
+  role,,,,,
+  etc,,,,,,
+  "), header = T, stringsAsFactor=F)
   names(dat)
   gsub("\\.", "_", tolower(names(dat)))
   names(dat) <- names_lcu(dat)
